--- a/src/Feature/Contact/code/packages.config
+++ b/src/Feature/Contact/code/packages.config
@@ -6,6 +6,6 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Sitecore.Kernel.NoReferences" version="8.2.170728" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.Mvc.NoReferences" version="8.2.170728" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Kernel" version="12.0.0" targetFramework="net471" />
+  <package id="Sitecore.Mvc" version="3.0.0" targetFramework="net471" />
 </packages>
